--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This is the list of authors of tantivy for copyright purposes.
+# This is the list of authors of lindera for copyright purposes.
 Paul Masurel
 Minoru Osuka
 Jun Ohtani
